--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,256 @@
-flask==3.0.0
-langchain==0.1.8
-ctransformers==0.2.27
-pypdf==4.0.0
-llama-index==0.9.38
-torch==2.1.2
+aiofiles==23.2.1
+aiohttp==3.9.3
+aiosignal==1.3.1
+annotated-types==0.6.0      
+anyio==4.3.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asgiref==3.8.1
+asttokens==2.2.1
+async-timeout==4.0.3        
+attrs==23.2.0
+backcall==0.2.0
+backoff==2.2.1
+bcrypt==4.1.2
+beautifulsoup4==4.12.3
+black==24.3.0
+bleach==6.0.0
+blinker==1.8.2
+build==1.2.1
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+chroma-hnswlib==0.7.3
+chromadb==0.4.24
+click==8.1.7
+colorama==0.4.6
+coloredlogs==15.0.1
+comm==0.1.3
+contourpy==1.1.1
+cycler==0.12.1
+dataclasses-json==0.6.4
+debugpy==1.6.7
+decorator==4.4.2
+defusedxml==0.7.1
+Deprecated==1.2.14
+distro==1.9.0
+dnspython==2.6.1
+docx2txt==0.8
+ecdsa==0.18.0
+email_validator==2.1.1
+exceptiongroup==1.2.0
+executing==1.2.0
+fastapi==0.110.0
+fastjsonschema==2.17.1
+filelock==3.13.4
+flake8==7.0.0
+FlashRank==0.2.0
+Flask==3.0.3
+Flask-Cors==4.0.1
+flatbuffers==24.3.25
+fonttools==4.43.1
+fqdn==1.5.1
+frozenlist==1.4.1
+fsspec==2024.3.1
+google-ai-generativelanguage==0.6.4
+google-api-core==2.19.0
+google-api-python-client==2.130.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.5.4
+googleapis-common-protos==1.63.0
+greenlet==3.0.3
+grpcio==1.62.2
+grpcio-status==1.62.2
+h11==0.14.0
+httpcore==1.0.4
+httplib2==0.22.0
+httptools==0.6.1
+httpx==0.27.0
+huggingface-hub==0.23.1
+humanfriendly==10.0
+idna==3.6
+imageio==2.31.5
+imageio-ffmpeg==0.4.9
+importlib-metadata==7.0.0
+importlib_resources==6.4.0
+intel-openmp==2021.4.0
+ipykernel==6.24.0
+ipython==8.14.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.6
+isoduration==20.11.0
+isort==5.13.2
+itsdangerous==2.2.0
+jedi==0.18.2
+Jinja2==3.1.2
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.17.3
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.6.3
+jupyter_client==8.3.0
+jupyter_core==5.3.1
+jupyter_server==2.7.0
+jupyter_server_terminals==0.4.4
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.7
+kiwisolver==1.4.5
+kubernetes==29.0.0
+langchain==0.2.1
+langchain-community==0.2.1
+langchain-core==0.2.1
+langchain-experimental==0.0.55
+langchain-openai==0.1.0
+langchain-text-splitters==0.2.0
+langchainhub==0.1.15
+langsmith==0.1.31
+loguru==0.7.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+marshmallow==3.21.1
+matplotlib==3.8.0
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+mdurl==0.1.2
+mistune==3.0.1
+mkl==2021.4.0
+mmh3==4.1.0
+mongoengine==0.28.2
+monotonic==1.6
+motor==3.3.2
+moviepy==1.0.3
+mpmath==1.3.0
+multidict==6.0.5
+mypy==1.9.0
+mypy-extensions==1.0.0
+nbclassic==1.0.0
+nbclient==0.8.0
+nbconvert==7.6.0
+nbformat==5.9.0
+nest-asyncio==1.6.0
+networkx==3.3
+notebook==6.5.4
+notebook_shim==0.2.3
+numpy==1.26.4
+oauthlib==3.2.2
+onnxruntime==1.17.3
+openai==1.30.2
+opentelemetry-api==1.24.0
+opentelemetry-exporter-otlp-proto-common==1.24.0
+opentelemetry-exporter-otlp-proto-grpc==1.24.0
+opentelemetry-instrumentation==0.45b0
+opentelemetry-instrumentation-asgi==0.45b0
+opentelemetry-instrumentation-fastapi==0.45b0
+opentelemetry-proto==1.24.0
+opentelemetry-sdk==1.24.0
+opentelemetry-semantic-conventions==0.45b0
+opentelemetry-util-http==0.45b0
+orjson==3.9.15
+overrides==7.3.1
+packaging==23.2
+pandas==2.2.1
+pandocfilters==1.5.0
+parso==0.8.3
+passlib==1.7.4
+pathspec==0.12.1
+pickleshare==0.7.5
+pillow==10.3.0
+pinecone-client==3.1.0
+platformdirs==4.2.0
+posthog==3.5.0
+proglog==0.1.10
+prometheus-client==0.17.0
+prompt-toolkit==3.0.38
+proto-plus==1.23.0
+protobuf==4.25.3
+psutil==5.9.5
+pulsar-client==3.5.0
+pure-eval==0.2.2
+pyasn1==0.5.1
+pyasn1_modules==0.4.0
+pycodestyle==2.11.1
+pydantic==2.6.4
+pydantic_core==2.16.3
+pyflakes==3.2.0
+Pygments==2.15.1
+pymongo==4.6.2
+PyMuPDF==1.24.4
+PyMuPDFb==1.24.3
+pyngrok==7.1.6
+pyparsing==3.1.1
+pypdf==4.1.0
+PyPika==0.48.9
+pyproject_hooks==1.0.0
+pyreadline3==3.4.1
+pyrsistent==0.19.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-jose==3.3.0
+python-json-logger==2.0.7
+python-multipart==0.0.9
+pytz==2024.1
+pywin32==306
+pywinpty==2.0.10
+PyYAML==6.0.1
+pyzmq==25.1.0
+qtconsole==5.4.3
+QtPy==2.3.1
+regex==2023.12.25
+requests==2.31.0
+requests-oauthlib==2.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.1
+rsa==4.9
+safetensors==0.4.3
+scikit-learn==1.5.0
+scipy==1.13.1
+Send2Trash==1.8.2
+sentence-transformers==2.7.0
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.4.1
+split-folders==0.5.1
+SQLAlchemy==2.0.28
+stack-data==0.6.2
+starlette==0.36.3
+sympy==1.12
+tbb==2021.12.0
+tenacity==8.2.3
+terminado==0.17.1
+threadpoolctl==3.5.0
+tiktoken==0.6.0
+tinycss2==1.2.1
+tokenizers==0.19.1
+tomli==2.0.1
+torch==2.3.0
+tornado==6.3.2
+tqdm==4.66.2
+traitlets==5.9.0
+transformers==4.41.1
+typer==0.12.3
+types-requests==2.32.0.20240523
+typing-inspect==0.9.0
+typing_extensions==4.10.0
+tzdata==2024.1
+uri-template==1.3.0
+uritemplate==4.1.1
+urllib3==2.2.1
+uvicorn==0.29.0
+watchfiles==0.21.0
+wcwidth==0.2.6
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.6.1
+websockets==12.0
+Werkzeug==3.0.3
+widgetsnbextension==4.0.7
+win32-setctime==1.1.0
+wrapt==1.16.0
+yarl==1.9.4
+zipp==3.18.1
