--- a/requirements.txt
+++ b/requirements.txt
@@ -46,8 +46,6 @@ fastjsonschema==2.17.1
 filelock==3.13.4
 flake8==7.0.0
 FlashRank==0.2.0
-Flask==3.0.3
-Flask-Cors==4.0.1
 flatbuffers==24.3.25
 fonttools==4.43.1
 fqdn==1.5.1
@@ -89,25 +87,14 @@ joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.17.3
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.6.3
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-jupyter_server==2.7.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.7
-kiwisolver==1.4.5
-kubernetes==29.0.0
-langchain==0.2.1
-langchain-community==0.2.1
-langchain-core==0.2.1
+langchain
+langchain-community
+langchain-core
 langchain-experimental
-langchain-openai==0.1.0
-langchain-text-splitters==0.2.0
-langchainhub==0.1.15
-langsmith==0.1.31
+langchain-openai
+langchain-text-splitters
+langchainhub
+langsmith
 loguru==0.7.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
@@ -241,8 +228,6 @@ watchfiles==0.21.0
 wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
-websocket-client==1.6.1
-websockets==12.0
 Werkzeug==3.0.3
 widgetsnbextension==4.0.7
 win32-setctime==1.1.0
